# context-groups.nvim

./: .envrc  .gitignore  Makefile  Makefile.rust  README.md  stylua.toml
doc/: context-groups.txt
lua/context-groups/: code2prompt.lua  config.lua  core.lua  diagnostics.lua  export.lua  git_diff.lua  init.lua  llm_context.lua  lsp.lua  picker.lua  project.lua  storage.lua  ui.lua  utils.lua
lua/context-groups/code2prompt/: init.lua
lua/context-groups/core/: export.lua  init.lua  project.lua  storage.lua
lua/context-groups/git_diff_inline/: init.lua
lua/context-groups/language/: go.lua  init.lua  python.lua
lua/context-groups/llm/: init.lua  init_llm.lua
lua/context-groups/llm_context/: profile.lua
lua/context-groups/lsp/: go.lua  init.lua  python.lua
lua/context-groups/lsp_diagnostics/: init.lua
lua/context-groups/lsp_diagnostics_inline/: init.lua
lua/context-groups/ui/: commands.lua  init.lua  picker.lua
lua/context-groups/utils/: README.md  toml.lua  yaml.lua  yaml_parser.lua  yaml_pure.lua  yaml_rust.lua
lua/spec/context-groups/: core_spec.lua
lua/spec/context-groups/language/: go_spec.lua  python_spec.lua
lua/spec/context-groups/llm/: init_spec.lua  profile_manager_spec.lua  yaml_support_spec.lua
lua/spec/context-groups/lsp/: go_mod_spec.lua  go_spec.lua
lua/spec/context-groups/utils/: toml_spec.lua  yaml_integration_spec.lua  yaml_spec.lua
rust/: Cargo.toml
rust/src/: lib.rs  parser.rs
scripts/: config.yaml.example  minimal.vim  test_yaml.lua
