[package]
name = "yaml_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Context Groups Neovim Plugin"]
description = "YAML parsing bridge for Neovim plugin"

[lib]
name = "yaml_bridge"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
libc = "0.2"
